--- a/Backend/vercel.json
+++ b/Backend/vercel.json
@@ -1,1 +1,6 @@
-
+{
+  "version": 2,
+  "name": "Blog",
+  "builds": [{ "src": "server.js", "use": "@vercel/node" }],
+  "routes": [{ "src": "/(.*)", "dest": "/server.js" }]
+}
